<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.detailMovie.DetailMovieActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/purple_500"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image"
                tools:src="@tools:sample/backgrounds/scenic"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:minHeight="50dp"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:title="@string/app_name"
                android:layout_width="match_parent"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:titleTextColor="@android:color/white"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_back"
                app:layout_scrollFlags="scroll|enterAlways"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                app:cardElevation="3dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/label_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_title"
                        android:textSize="22sp"
                        android:layout_margin="8dp"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Título de la película"
                        android:textSize="22sp"
                        android:textColor="@color/black"
                        android:layout_margin="8dp"
                        app:layout_constraintTop_toBottomOf="@id/label_title"/>
                    <TextView
                        android:id="@+id/label_vote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_vote"
                        android:textSize="20sp"
                        android:layout_margin="8dp"
                        app:layout_constraintTop_toBottomOf="@id/title"/>
                    <ImageView
                        android:id="@+id/star"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:src="@drawable/ic_star"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        app:tint="@color/purple_700"
                        app:layout_constraintTop_toTopOf="@id/vote"
                        app:layout_constraintBottom_toBottomOf="@id/vote"
                        app:layout_constraintStart_toStartOf="parent"/>
                    <TextView
                        android:id="@+id/vote"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="10.5"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_margin="8dp"
                        android:includeFontPadding="false"
                        app:layout_constraintStart_toEndOf="@id/star"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/label_vote"/>
                    <TextView
                        android:id="@+id/label_release"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_release"
                        android:textSize="20sp"
                        android:layout_margin="8dp"
                        app:layout_constraintTop_toBottomOf="@id/vote"/>
                    <TextView
                        android:id="@+id/release"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="2019-05-12"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_margin="8dp"
                        app:layout_constraintTop_toBottomOf="@id/label_release"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_overview"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_margin="4dp"/>
            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Este es el ejemplo de una sinopsis de película."
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_margin="8dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        layout="@layout/layout_loader"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>